--- a/Monday_Lesson_Inclass_Lecture.ipynb
+++ b/Monday_Lesson_Inclass_Lecture.ipynb
@@ -2242,10 +2242,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Another kind of error\n",
+      "Next part of the code\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use whenever you expect to encounter a bug so that the error doesn't cause the program to stop\n",
+    "# Use so that you can log out graceful and useful error messages\n",
+    "\n",
+    "my_list = [1, 4, 6, 7, '6', 5, 7, 2]\n",
+    "\n",
+    "try:\n",
+    "    total = 0\n",
+    "    for num in my_list:\n",
+    "        total /= 0\n",
+    "except TypeError as err:\n",
+    "    total = 0\n",
+    "    print(\"There was an error in your code:\", err)\n",
+    "except AttributeError as err:\n",
+    "    total = 10\n",
+    "    print('Different Error', err)\n",
+    "except:\n",
+    "    print('Another kind of error')\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "print('Next part of the code')\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your age? twenty\n",
+      "Please enter a whole number, i.e. 25 invalid literal for int() with base 10: 'twenty'\n",
+      "What is your age? 25\n",
+      "25 is a great time to be alive\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        age = int(input('What is your age? '))\n",
+    "        print(f'{age} is a great time to be alive')\n",
+    "        break\n",
+    "    except ValueError as err:\n",
+    "        print('Please enter a whole number, i.e. 25', err)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2263,10 +2323,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "<class 'list'>\n",
+      "['Max', 'Cindy', 'Kathy', 'Bob', 'Nate', 'Jack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ordered Collection of Data\n",
+    "\n",
+    "l_1 = [] # Empty list declaration\n",
+    "\n",
+    "print(l_1)\n",
+    "print(type(l_1))\n",
+    "\n",
+    "names = ['Max', 'Cindy', 'Kathy', 'Bob', 'Nate', 'Jack']\n",
+    "print(names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2277,10 +2357,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max\n",
+      "Jack\n",
+      "['Cindy', 'Kathy', 'Bob']\n",
+      "['Kathy', 'Bob', 'Nate', 'Jack']\n",
+      "['Max', 'Cindy', 'Kathy', 'Bob']\n",
+      "['Cindy', 'Bob', 'Jack']\n",
+      "['Jack', 'Nate', 'Bob', 'Kathy', 'Cindy', 'Max']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list[index]\n",
+    "# list[start_index:stop_index] - start is inclusive, stop is exclusive\n",
+    "# list[start_index:stop_index:step]\n",
+    "\n",
+    "# Single Index - Single value from the list\n",
+    "print(names[0])\n",
+    "\n",
+    "# Negative Single Index\n",
+    "print(names[-1])\n",
+    "\n",
+    "# Print the names from index 1 to index 3\n",
+    "print(names[1:4])\n",
+    "\n",
+    "# Print the names from index 2 to the end\n",
+    "print(names[2:])\n",
+    "\n",
+    "# Print the names from the beginning to index 3\n",
+    "print(names[:4])\n",
+    "\n",
+    "# Print the names starting at index 1 and print every other name\n",
+    "print(names[1::2])\n",
+    "\n",
+    "# Print starting at the back and end at the front (aka reverse)\n",
+    "print(names[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class list in module builtins:\n",
+      "\n",
+      "class list(object)\n",
+      " |  list(iterable=(), /)\n",
+      " |  \n",
+      " |  Built-in mutable sequence.\n",
+      " |  \n",
+      " |  If no argument is given, the constructor creates a new empty list.\n",
+      " |  The argument must be an iterable if specified.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(...)\n",
+      " |      x.__getitem__(y) <==> x[y]\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __iadd__(self, value, /)\n",
+      " |      Implement self+=value.\n",
+      " |  \n",
+      " |  __imul__(self, value, /)\n",
+      " |      Implement self*=value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the list.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |  \n",
+      " |  __sizeof__(self, /)\n",
+      " |      Return the size of the list in memory, in bytes.\n",
+      " |  \n",
+      " |  append(self, object, /)\n",
+      " |      Append object to the end of the list.\n",
+      " |  \n",
+      " |  clear(self, /)\n",
+      " |      Remove all items from list.\n",
+      " |  \n",
+      " |  copy(self, /)\n",
+      " |      Return a shallow copy of the list.\n",
+      " |  \n",
+      " |  count(self, value, /)\n",
+      " |      Return number of occurrences of value.\n",
+      " |  \n",
+      " |  extend(self, iterable, /)\n",
+      " |      Extend list by appending elements from the iterable.\n",
+      " |  \n",
+      " |  index(self, value, start=0, stop=9223372036854775807, /)\n",
+      " |      Return first index of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  insert(self, index, object, /)\n",
+      " |      Insert object before index.\n",
+      " |  \n",
+      " |  pop(self, index=-1, /)\n",
+      " |      Remove and return item at index (default last).\n",
+      " |      \n",
+      " |      Raises IndexError if list is empty or index is out of range.\n",
+      " |  \n",
+      " |  remove(self, value, /)\n",
+      " |      Remove first occurrence of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  reverse(self, /)\n",
+      " |      Reverse *IN PLACE*.\n",
+      " |  \n",
+      " |  sort(self, /, *, key=None, reverse=False)\n",
+      " |      Sort the list in ascending order and return None.\n",
+      " |      \n",
+      " |      The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
+      " |      order of two equal elements is maintained).\n",
+      " |      \n",
+      " |      If a key function is given, apply it once to each list item and sort them,\n",
+      " |      ascending or descending, according to their function values.\n",
+      " |      \n",
+      " |      The reverse flag can be set to sort in descending order.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2291,10 +2571,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Kathy', 'Bob', 'Nate', 'Jack']\n",
+      "['Max', 'Cindy', 'Kathy', 'Bob', 'Nate', 'Jack', 'Gregory']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list.append(value_to_append)\n",
+    "print(names)\n",
+    "names.append('Gregory')\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names.append('Bob')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2305,10 +2608,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Kathy', 'Brian', 'Bob', 'Nate', 'Jack', 'Gregory']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list.insert(index, value)\n",
+    "names.insert(3, 'Brian')\n",
+    "print(names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2319,10 +2634,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Kathy', 'Brian', 'Bob', 'Nate', 'Jack']\n",
+      "Gregory\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list.pop(index) defaults to -1\n",
+    "# pop REMOVES the element from the list and then RETURNS the element in case you want to use \n",
+    "\n",
+    "some_name = names.pop()\n",
+    "print(names)\n",
+    "print(some_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kathy'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.pop(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Brian', 'Bob', 'Nate', 'Jack', 'Bob', 'Bob']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2334,10 +2704,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Brian', 'Nate', 'Jack', 'Bob', 'Bob']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list.remove(value_to_remove)\n",
+    "\n",
+    "names.remove('Bob')\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Cindy', 'Brian', 'Nate', 'Jack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove all occurences out of list\n",
+    "while 'Bob' in names:\n",
+    "    names.remove('Bob')\n",
+    "print(names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2348,10 +2751,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Brian', 'Nate', 'Jack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# del(list[index])\n",
+    "\n",
+    "del(names[1])\n",
+    "\n",
+    "print(names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2362,10 +2779,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list1 + list2 = the two lists appended togeter, not add up elements\n",
+    "\n",
+    "l_1 = [1, 2, 3]\n",
+    "l_2 = [4, 5, 6]\n",
+    "\n",
+    "l_3 = l_1 + l_2\n",
+    "\n",
+    "print(l_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2376,10 +2810,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sally'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lists are able to hold any type of element, including OTHER lists themsevles\n",
+    "# they can also go as deep as you want, having many lists nested inside of each other\n",
+    "\n",
+    "cohorts = [['Billy',[ 'Sally', 'Lucy'], 'Freddie'],['David', 'Amanda', 'Laurie'], ['Tim', 'Liz', 'Jeff']]\n",
+    "\n",
+    "cohorts[0][1][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2390,10 +2842,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max\n",
+      "Brian\n",
+      "Nate\n",
+      "Jack\n",
+      "0 Max\n",
+      "1 Brian\n",
+      "2 Nate\n",
+      "3 Jack\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Loop with a for loop using the 'in' keyword\n",
+    "for name in names:\n",
+    "    print(name)\n",
+    "    \n",
+    "\n",
+    "# Loop with a for loop using range(len(list)) to get index values\n",
+    "for i in range(len(names)):\n",
+    "    print(i, names[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'Max')\n",
+      "(1, 'Brian')\n",
+      "(2, 'Nate')\n",
+      "(3, 'Jack')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in enumerate(names):\n",
+    "    print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2405,10 +2903,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Output\n",
+    "# 0\n",
+    "# 1\n",
+    "# 8\n",
+    "# 27\n",
+    "# 64\n",
+    "# 125\n",
+    "# 216\n",
+    "# 343\n",
+    "# 512\n",
+    "# 729\n",
+    "# 1000\n",
+    "\n",
+    "number_to_cube = 0\n",
+    "\n",
+    "while number_to_cube ** 3 <= 1000:\n",
+    "    print(number_to_cube ** 3)\n",
+    "    number_to_cube += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1000):\n",
+    "    print(num**3)\n",
+    "    if num**3 >= 1000:\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2420,21 +2985,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "# HINT::\n",
     "# An else after an if runs if the if didn’t\n",
     "# An else after a for runs if the for didn’t break\n",
     "\n",
     "\n",
-    "name = 'Brian'\n",
-    "for letter in name:\n",
-    "    if letter == 'a':\n",
-    "        break\n",
-    "else:\n",
-    "    print(\"Success\")"
+    "for i in range(2, 101):\n",
+    "    for j in range(2, i//2 + 1):\n",
+    "        if i % j == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -2443,6 +3040,31 @@
    "source": [
     "# Exercise 3 <br>\n",
     "<p>Take in a users input for their age, if they are younger than 18 print kids, if they're 18 to 65 print adults, else print seniors</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your age? 65\n",
+      "Seniors\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"What is your age? \"))\n",
+    "\n",
+    "if age < 18:\n",
+    "    print('Kids')\n",
+    "elif age < 65:\n",
+    "    print('Adults')\n",
+    "else:\n",
+    "    print('Seniors')"
    ]
   },
   {
