--- a/Monday_Lesson_Inclass_Lecture_Updated2021.ipynb
+++ b/Monday_Lesson_Inclass_Lecture_Updated2021.ipynb
@@ -1800,15 +1800,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n",
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "list_num = []\n",
     "\n",
     "\n",
     "        \n",
-    "        \n"
+    "i = 0\n",
+    "while i ** 3 <= 1000:\n",
+    "    print(i ** 3)\n",
+    "    i += 1"
    ]
   },
   {
